# HighMap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2export_8hpp-example.html  algebra_8hpp.html  algebra_8hpp.js  algebra_8hpp_source.html  alpha__model_8cpp.html  alpha__model_8cpp.js  alter__elevation_8cpp.html  alter__elevation_8cpp.js  annotated.html  annotated_dup.js  array_8cpp.html  array_8cpp.js  array_8hpp.html  array_8hpp.js  array_8hpp_source.html  assert_8cpp.html  assert_8cpp.js  assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html  authoring_8hpp.html  authoring_8hpp.js  authoring_8hpp_source.html  basalt__field_8cpp.html  basalt__field_8cpp.js  base__elevation_8cpp.html  base__elevation_8cpp.js  bib3207.aux  blending_8cpp.html  blending_8cpp.js  blending_8hpp.html  blending_8hpp.js  blending_8hpp_source.html  blending__gpu_8cpp.html  blending__gpu_8cpp.js  (+1166 more)
HighMap/: CMakeLists.txt
HighMap/include/: highmap.hpp
HighMap/include/highmap/: algebra.hpp  array.hpp  array3.hpp  authoring.hpp  blending.hpp  boundary.hpp  colorize.hpp  colormaps.hpp  convolve.hpp  coord_frame.hpp  curvature.hpp  dbg.hpp  dendry_array_control_function.hpp  erosion.hpp  export.hpp  features.hpp  fft.hpp  filters.hpp  functions.hpp  geometry.hpp  gpu.hpp  gradient.hpp  heightmap.hpp  hydrology.hpp  interpolate.hpp  interpolate1d.hpp  interpolate2d.hpp  interpolate_array.hpp  interpolate_curve.hpp  io.hpp  kernels.hpp  math.hpp  morphology.hpp  noise_function.hpp  op.hpp  operator.hpp  primitives.hpp  pyramid.hpp  range.hpp  roads.hpp  (+9 more)
HighMap/src/: selector.cpp
HighMap/src/algebra/: algebra.cpp
HighMap/src/array/: array_base.cpp  array_io.cpp  array_methods.cpp  dijsktra.cpp  io.cpp  methods.cpp  opencv_wrapper.cpp
HighMap/src/array3/: array3.cpp
HighMap/src/authoring/: alter_elevation.cpp  base_elevation.cpp  reverse_midpoint.cpp  ridgelines.cpp  stamping.cpp
HighMap/src/blending/: blending.cpp  blending_gpu.cpp
HighMap/src/boundary/: boundary.cpp
HighMap/src/colorize/: colorize.cpp
HighMap/src/colormaps/: get_colormap_data.cpp
HighMap/src/convolve/: convolve.cpp  convolve2d_svd.cpp
HighMap/src/coord_frame/: coord_frame.cpp
HighMap/src/curvature/: curvature.cpp  curvature_gpu.cpp
HighMap/src/dbg/: assert.cpp  timer.cpp
HighMap/src/erosion/: deposition.cpp  depression_filling.cpp  erosion_gpu.cpp  erosion_maps.cpp  hydraulic_algebric.cpp  hydraulic_benes.cpp  hydraulic_blur.cpp  hydraulic_diffusion.cpp  hydraulic_musgrave.cpp  hydraulic_particle.cpp  hydraulic_particle_multiscale.cpp  hydraulic_procedural.cpp  hydraulic_ridge.cpp  hydraulic_schott.cpp  hydraulic_schott_gpu.cpp  hydraulic_spl.cpp  hydraulic_stream.cpp  hydraulic_stream_gpu.cpp  hydraulic_stream_upscale_amplification.cpp  hydraulic_vpipes.cpp  stratify.cpp  thermal.cpp  thermal_flatten.cpp  thermal_gpu.cpp  thermal_olsen.cpp  thermal_rib.cpp  thermal_schott.cpp  thermal_scree.cpp
HighMap/src/export/: export_as_cubemap.cpp  export_asset.cpp  export_banner_png.cpp  export_birdview.cpp  export_normal_map.cpp  export_splatmap.cpp  export_tiled.cpp  format_png.cpp  format_raw.cpp  helpers.cpp  read_to_array.cpp
HighMap/src/features/: connected_components.cpp  curvature.cpp  curvature_gpu.cpp  features.cpp  features_gpu.cpp  geomorphons.cpp  kmeans_clustering.cpp
HighMap/src/fft/: fft.cpp
HighMap/src/filters/: diffusion_retargeting.cpp  directional_blur.cpp  faceted.cpp  filters.cpp  filters_gpu.cpp  recast.cpp  recurve.cpp  recurve_spectral.cpp  tesselate.cpp
HighMap/src/geometry/: cloud.cpp  graph.cpp  grid.cpp  path.cpp  point_sampling.cpp  points.cpp
HighMap/src/gpu/: filters_gpu.cpp  kernel.cl  kernel_hydraulic_particle.cl  kernel_median_3x3.cl  kernel_ridgelines.cl  kernel_simplex.cl  kernel_voronoise.cl  opencl_config.cpp  rand.cl  utils_index.cl
HighMap/src/gpu_opencl/: function_wrappers.cpp  gpu_opencl.cpp  wrappers_erosion.cpp  wrappers_features.cpp  wrappers_filters.cpp  wrappers_gradient.cpp  wrappers_morphology.cpp  wrappers_operator.cpp  wrappers_primitives.cpp  wrappers_range.cpp
HighMap/src/gradient/: gradient.cpp  normal_map.cpp  phase_field.cpp  unwrap_phase.cpp
HighMap/src/heightmap/: heightmap_base.cpp  heightmap_rgb.cpp  heightmap_rgba.cpp  heightmap_transform.cpp  tile_base.cpp  transform.cpp
HighMap/src/hydrology/: find_flow_sinks.cpp  flooding_from_point.cpp  flow_accumulation_d8.cpp  flow_accumulation_d8_gpu.cpp  flow_accumulation_dinf.cpp  flow_stream.cpp  generate_riverbed.cpp  generate_riverbed_gpu.cpp
HighMap/src/interpolate/: interpolate.cpp  interpolate1d.cpp  interpolate2d.cpp  interpolate_array.cpp  interpolate_array_gpu.cpp  interpolate_curve.cpp  interpolate_heightmap.cpp
HighMap/src/io/: colorize.cpp  convert_ryb.cpp  export_asset.cpp  export_birdview.cpp  export_hillshade.cpp  export_normal_map.cpp  export_splatmap.cpp  export_vector_glyph.cpp  export_wavefront_obj.cpp  format_png.cpp  format_raw.cpp  get_colormap_data.cpp
HighMap/src/kernels/: kernels.cpp
HighMap/src/math/: distance_function.cpp  math.cpp  phasor_profile_function.cpp
HighMap/src/morphology/: distance_transform.cpp  distance_transform_approx.cpp  morphology.cpp  morphology_gpu.cpp
HighMap/src/multiscale/: downscale_transform.cpp  pyramid_decomposition.cpp  upscale_amplification.cpp
HighMap/src/op/: blending.cpp  boundaries.cpp  convolve.cpp  convolve2d_svd.cpp  distance_transform.cpp  faceted.cpp  filters.cpp  gradients.cpp  interpolate.cpp  math.cpp  morphology.cpp  quilting.cpp  range.cpp  recast.cpp  recurve.cpp  selector.cpp  shadow.cpp  tesselate.cpp  transform.cpp  warp.cpp
HighMap/src/operator/: detrend.cpp  fill_array.cpp  inpainting_gaussian.cpp  operator.cpp  stitching_helpers.cpp  vector.cpp
HighMap/src/particles/: particles.cpp
HighMap/src/primitives/: checkerboard.cpp  dendry.cpp  diffusion_limited_aggregation.cpp  fbm.cpp  fbm_iq.cpp  fbm_jordan.cpp  fbm_swiss.cpp  fractal.cpp  gabor.cpp  geo.cpp  kernels.cpp  noise.cpp  (+16 more)
tests/unittest/: CMakeLists.txt  test_array.cpp
(+1862 files in other folders)
